# codex-power-utils

./: .gitignore  .gitmodules  Cargo.toml  README.md  api.md
.agents/plugins/: marketplace.json
crates/agent-mail/: Cargo.toml
crates/agent-mail/src/: main.rs
docs/: agent-mail-implementation-spec.md  agent-mail-mcp-plugin-implementation-spec.md  agent-mail-mcp-plugin.md  agent-mail.md
docs/releases/: agent-mail-v0.4.0.md
plugins/agent-mail/: .mcp.json  README.md
plugins/agent-mail/.codex-plugin/: plugin.json
plugins/agent-mail/hooks/: hooks.json
scripts/: package-agent-mail-plugin.sh  smoke-test-agent-mail-plugin.sh
skills/agent-messaging/: draft.md  draft2.md
