[package]
name = "agent-mail"
version.workspace = true
edition.workspace = true
autolib = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
